[gd_scene load_steps=2 format=3 uid="uid://3gl3ttum8dvg"]

[ext_resource type="Script" uid="uid://rqeldga51www" path="res://scripts/MainMenu.gd" id="1_k4h8l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k4h8l")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "üç∫ BAR-SIK"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üè™ Idle Bar Management"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "üöÄ Iniciar Juego"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚öôÔ∏è Configuraci√≥n"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "üìù Cr√©ditos"

[node name="QAButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "üéØ Professional QA"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚ùå Salir"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0"
